@@ -1,14 +1,14 @@
-ATOM      1  C  B  C C   7      22.336  25.300  48.803  0.95 73.21           X
-ATOM      2  O  B  O C   7      22.578  25.378  50.020  0.95 76.17           O
+ATOM      1  C  BC   C   7      22.336  25.300  48.803  0.95 73.21           X
+ATOM      2  O  BO   C   7      22.578  25.378  50.020  0.95 76.17           O
 TER       3        O C   7 
-ATOM      4  N     N C  18      23.300  25.431  47.882  0.95 60.78           N
-ATOM      5  CA   CA C  18      24.707  25.677  48.218  0.95 58.16           X
-ATOM      6  C     C C  18      24.880  27.133  48.611  0.95 53.98           X
-ATOM      7  O     O C  18      23.948  27.896  48.474  0.95 54.49           O
-ATOM      8  CB   CB C  18      25.419  25.374  46.911  0.95 48.57           X
-ATOM      9  CG   CG C  18      24.445  25.914  45.921  0.95 64.58           X
-ATOM     10  CD   CD C  18      23.100  25.432  46.425  0.95 56.59           X
-ATOM     11  HA   HA C  18      25.084  25.083  49.051  0.95 10.00           H
+ATOM      4  N   N   C  18      23.300  25.431  47.882  0.95 60.78           N
+ATOM      5  CA  CA  C  18      24.707  25.677  48.218  0.95 58.16           X
+ATOM      6  C   C   C  18      24.880  27.133  48.611  0.95 53.98           X
+ATOM      7  O   O   C  18      23.948  27.896  48.474  0.95 54.49           O
+ATOM      8  CB  CB  C  18      25.419  25.374  46.911  0.95 48.57           X
+ATOM      9  CG  CG  C  18      24.445  25.914  45.921  0.95 64.58           X
+ATOM     10  CD  CD  C  18      23.100  25.432  46.425  0.95 56.59           X
+ATOM     11  HA  HA  C  18      25.084  25.083  49.051  0.95 10.00           H
 ATOM     12 2H   2HB C  18      26.379  25.887  46.849  0.95 10.00           H
 ATOM     13 3H   3HB C  18      25.573  24.303  46.778  0.95 10.00           H
 ATOM     14 2H   2HG C  18      24.482  27.003  45.895  0.95 10.00           H
@@ -16,18 +16,18 @@ ATOM     15 3H   3HG C  18      24.648  25.523  44.924  0.95 10.00           H
 ATOM     16 2H   2HD C  18      22.300  26.114  46.135  0.95 10.00           H
 ATOM     17 3H   3HD C  18      22.873  24.432  46.055  0.95 10.00           H
 TER      18      3HD C  18 
-HETATM   19  N     N C   9      26.077  27.507  49.057  0.95 58.79           N
-HETATM   20  CA   CA C   9      26.399  28.870  49.505  0.95 62.15           X
-HETATM   21  C     C C   9      25.452  29.408  50.549  0.95 55.41           X
-HETATM   22  O     O C   9      24.266  29.598  50.302  0.95 51.25           O
-HETATM   23  CB   CB C   9      26.515  29.861  48.341  0.95 70.82           X
-HETATM   24  OG   OG C   9      27.874  30.269  48.160  0.95 72.34           O
-HETATM   25  H     H C   9      26.809  26.812  49.090  0.95 10.00           H
-HETATM   26  HA   HA C   9      27.377  28.774  49.977  0.95 10.00           H
+HETATM   19  N   N   C   9      26.077  27.507  49.057  0.95 58.79           N
+HETATM   20  CA  CA  C   9      26.399  28.870  49.505  0.95 62.15           X
+HETATM   21  C   C   C   9      25.452  29.408  50.549  0.95 55.41           X
+HETATM   22  O   O   C   9      24.266  29.598  50.302  0.95 51.25           O
+HETATM   23  CB  CB  C   9      26.515  29.861  48.341  0.95 70.82           X
+HETATM   24  OG  OG  C   9      27.874  30.269  48.160  0.95 72.34           O
+HETATM   25  H   H   C   9      26.809  26.812  49.090  0.95 10.00           H
+HETATM   26  HA  HA  C   9      27.377  28.774  49.977  0.95 10.00           H
 HETATM   27 2H   2HB C   9      26.159  29.385  47.428  0.95 10.00           H
 HETATM   28 3H   3HB C   9      25.903  30.737  48.553  0.95 10.00           H
-HETATM   29  HG   HG C   9      27.947  30.890  47.431  0.95 10.00           H
-ATOM     30  O     O   260      21.179  27.898  50.032  0.95 36.69           O
+HETATM   29  HG  HG  C   9      27.947  30.890  47.431  0.95 10.00           H
+ATOM     30  O   O     260      21.179  27.898  50.032  0.95 36.69           O
 TER      31        O   260 
 ATOM     32  O0  O01 E   1      24.324  25.447  52.462  0.95 10.00      E    O
 ATOM     33  C0  C02 E   1      23.482  23.863  53.847  0.95 10.00      E    X
